# intern-2025

./: .gitignore  README.md  pyproject.toml
test-tools/DataGen/: .gitignore  834filecreation.py  BellShapes.py  Database_Functions.py  Datatypes.py  FileCreation_834.py  README.md  RunGenerator.py  Statistics_Visualizer.md  TestSuite.py  config.py  log_config.py  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
test-tools/DataGen/Config/: BellShapes.py  Config.py  Data_Visualizer.py
test-tools/DataGen/DataLayer/: Datatypes.py  Interfaces.py
test-tools/DataGen/FileCreation/: DataCreation.py  DataGenerator.py  EDI834Generator.py  EDIGenerator.py  EDISegments.py  EDI_File_Generator.py  ErrorCheck.py  ErrorController.py  ErrorInjector.py  FileCreation_834.py
test-tools/DataGen/Repository/: Local_Database_Functions.py  Mongo_Database_Functions.py  NPI_Functions.py
test-tools/DataGen/UnitTests/: Test_EDIFiles.py  UnitTestSuite.py  test.py
test-tools/DataGen/samples/277CA/: 277CA-Accept-Multi.txt  277CA-Accept.txt
test-tools/DataGen/samples/835/: 835.description.valid.txt
test-tools/DataGen/src/: RunGenerator.py  Statistics_Visualizer.md
test-tools/DataGen/src/Config/: BellShapes.py  Config.py  Data_Visualizer.py  Log_Config.py  config.toml
test-tools/DataGen/src/DataLayer/: Datatypes.py  Interfaces.py
test-tools/DataGen/src/FileCreation/: DataGenerator.py  EDIGenerator.py  EDISegments.py  ErrorInjector.py
test-tools/DataGen/src/Repository/: DatabaseFactory.py  JSON_Database_Functions.py  Local_Database_Functions.py  NPI_Functions.py  SQLite_Database_Functions.py  SQLite_Transaction_Functions.py  Transaction_Storage_Functions.py
test-tools/DataGen/src/UnitTests/: Test_EDIFiles.py
test-tools/edi-test-client/: README.md  final_presentation.pptx  info.md  pyproject.toml  runapi.sh  runclient.sh  runserver.sh  sample-code.py
test-tools/edi-test-client/frontend/: package-lock.json
test-tools/edi-test-client/go-port/: go.mod
test-tools/edi-test-client/src/: config.py
test-tools/edi-test-client/tests/: test_config.py  test_request.py
(+78 files in other folders)
