[project]
name = "edi-test-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "edi_test_client", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
