[project]
name = "edi-test-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "boto3 (>=1.39.3,<2.0.0)",
    "faker (>=37.4.0,<38.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "tomli (>=2.2.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "edi_test_client", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
